allow to skip am_conf setting.

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -36,7 +36,7 @@ http {
     #gzip  on;
 
     am_boot_file "conf/OpenSSOAgentBootstrap.properties";
-    am_conf_file "conf/OpenSSOAgentConfiguration.properties";
+    #am_conf_file "conf/OpenSSOAgentConfiguration.properties";
 
     server {
         listen       8080;
